--- a/styles.css
+++ b/styles.css
@@ -9,21 +9,23 @@ body {
     font-family: "Barlow Semi Condensed", serif;
     background-color: hsl(210, 46%, 95%);
     height: 100vh;
+    display: grid;
+    place-items: center;
 }
 
 main {
-    width: 100%;
-    padding: 50px 24px;  
+    margin-block: 4rem;
 }
 
 section {
+    width: 100%;
     display: grid;
     gap: 24px;
+    padding: 32px;
 }
 
 .testimonial {
     width: 100%;
-    max-width: 600px;
     border-radius: 8px;
     padding: 32px;
 }
@@ -118,21 +120,11 @@ figure {
 .attribution { font-size: 11px; text-align: center; }
 .attribution a { color: hsl(228, 45%, 44%); }
 
-/* Desktop (1024px) */
-@media (min-width: 1024px) {
-    main {
-        margin: 0 auto;
-        padding: 50px 60px;
-    }
+@media (min-width: 600px) {
     section {
-        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-        grid-template-rows: repeat(2, 1fr);
+        grid-template-columns: repeat(2, minmax(250px, 1fr));
+        grid-template-rows: repeat(auto-fill, minmax(250px, 1fr));
         place-content: center;
-        gap: 24px;
-    }
-
-    .testimonial {
-        max-width: none;
     }
 
     .testimonial--1 {
@@ -140,19 +132,58 @@ figure {
         grid-row: 1;
     }
 
+    .testimonial--2 {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
     .testimonial--3 {
-        grid-column: 1 / 2;
+        grid-column: 2;
         grid-row: 2;
     }
 
     .testimonial--4 {
-        grid-column: 2 / 4;
-        grid-row: 2;
+        grid-column: 1 / 3;
+        grid-row: 4;
     }
 
     .testimonial--5 {
-        grid-column: 4 / 5;
-        grid-row: 1 / 3
+        grid-column: 1 / 3;
+        grid-row: 5;
+    }
+}
+
+@media (min-width: 768px) {
+    section {
+        width: 80%;
+        margin: 0 auto;
+        grid-template-columns: repeat(3, minmax(250px, 1fr));
+        grid-template-rows: repeat(3, minmax(250px, 1fr));
+    }
+
+    .testimonial--1 {
+        grid-column: 1 / 3;
+        grid-row: 1;
+    }
+
+    .testimonial--2 {
+        grid-column: 3;
+        grid-row: 1;
+    }
+
+    .testimonial--3 {
+        grid-column: 1 / 2;
+        grid-row: 3;
+    }
+
+    .testimonial--4 {
+        grid-column: 2/4;
+        grid-row: 3
+    }
+
+    .testimonial--5 {
+        grid-column: 1/4;
+        grid-row: 2;
     }
 
     .testimonial__title {
@@ -166,11 +197,38 @@ figure {
     }
 }
 
-/* Large Desktop (min-width: 1440px) */
-@media (min-width: 1440px) {
+
+/* Desktop (1024px) */
+@media (min-width: 1024px) {
     section {
-        grid-template-columns: repeat(4, 1fr);
+        grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+        grid-template-rows: repeat(2, 1fr);
         justify-items: center;
-        place-content: center;
+    }
+
+    .testimonial--1 {
+        grid-column: 1 / 3;
+        grid-row: 1;
+    }
+
+    .testimonial--2 {
+        grid-column: 3;
+        grid-row: 1;
+    }
+
+
+    .testimonial--3 {
+        grid-column: 1;
+        grid-row: 2;
+    }
+
+    .testimonial--4 {
+        grid-column: 2 / 4;
+        grid-row: 2;
+    }
+
+    .testimonial--5 {
+        grid-column: 4;
+        grid-row: 1 / 3
     }
 }
